@@ -1,5 +1,8 @@
 v6.9
 -----
+: Fixed a bug with Euro price formatting
+: Fixed a bug that caused some packages not to process savings calculations corectly (again)
+: Fixed the centering of the home page splash screen if present and the sidebar is disabled
 
 
 v6.8
